feat(app): add authentication flow, shared layout components, and HTTP client setup

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -19,4 +19,9 @@
     <PackageReference Include="Twilio" Version="7.13.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BasedLibrary\BasedLibrary.csproj" />
+    <ProjectReference Include="..\ClientLibrary\ClientLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
